--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres?schema=public"
